Fix intro styles (white overlap)

--- a/app/styles/base/_config.scss
+++ b/app/styles/base/_config.scss
@@ -91,4 +91,5 @@ $layout-xxl: rem(1700);
 // Other stuff…
 $border-radius: 3px;
 $bar-height: 50px;
+$bar-border-size: 2px;
 $progress-height: 10px;
