--- a/app/styles/layout/_intro.scss
+++ b/app/styles/layout/_intro.scss
@@ -19,7 +19,7 @@
 .Intro-bg {
 	padding-top: 4%;
 	padding-left: 10%;
-	background-image: url('../images/bg-intro.jpg');
+	background-image: url('../assets/images/bg-intro.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
